# mmv_h4tracks

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .project  .pylintrc  .pytest.ini  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml  test_and_deploy.yml.bkp
.napari/: DESCRIPTION.md
docs/: index.md
src/mmv_h4tracks/: __init__.py  _analysis.py  _assistant.py  _constants.py  _evaluation.py  _grabber.py  _logger.py  _processing.py  _reader.py  _segmentation.py  _selector.py  _session_trained_models.py  _tracking.py  _train.py  _utils.py  _widget.py  _writer.py  add_models.py  napari.yaml
src/mmv_h4tracks/_tests/: test_evaluation.py  test_lineage.py  test_lineage_preservation.py  test_processing.py  test_segmentation.py  test_tracking.py  test_train.py  test_widget.py
src/mmv_h4tracks/_tests/data/segmentation/: GT_false_negative_2.tif  false positive.tif  false positive_1.tif  false_negative_2.tif  falsely_cut.tif  seg_changed.tif  test_seg.tiff  test_seg_old.tiff  zelle_kleiner.tif
src/mmv_h4tracks/_tests/data/tracks/: deleted_edge.npy  test_trk.npy  test_trk_old.npy
src/mmv_hitl4trk/: __init__.py  _analysis.py  _evaluation.py  _logger.py  _processing.py  _segmentation.py  _selector.py  _tracking.py  _widget.py  _writer.py  add_models.py  napari.yaml
src/mmv_hitl4trk/_tests/: test_evaluation.py  test_processing.py  test_widget.py
src/mmv_hitl4trk/_tests/data/segmentation/: centroid_ausserhalb.tif
src/mmv_tracking_napari/: __init__.py  _analysis.py  _evaluation.py  _functions.py  _grabber.py  _logger.py  _processing.py  _reader.py  _ressources.py  _segmentation.py  _selector.py  _tracking.py  _widget.py  _writer.py  add_models.py  custom_models.json  napari.yaml
src/mmv_tracking_napari/_tests/: test_analysis.py  test_dock_widget.py  test_evaluation.py  test_widget.py
src/mmv_tracking_napari/_tests/data/images/: Raw Image.tif
src/mmv_tracking_napari/_tests/data/segmentation/: GT.tif  false_negative.tif  false_negative_1.tif  falsely_merged.tif
src/mmv_tracking_napari/_tests/data/tracks/: GT_tracks.npy  ID_twice.npy  added_edge.npy  deleted_edge.npy  justin_centroid_ausserhalb.npy  justin_falsely_cut.npy  offset.npy  switch.npy
