[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bumpversion]
current_version = "1.1.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/destripe_lsfm/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[project]
name = "mmv_h4tracks"
version = "1.1.1"
dynamic = ["requires-python"]
description = "Human in the loop 2d cell migration analysis"
authors = [
    { name = "Lennart Kowitz", email = "lennart.kowitz@isas.de" },
    { name = "Justin Sonneck", email = "justin.sonneck@isas.de" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Framework :: napari",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "numpy",
    "npe2",
    "napari-plugin-engine>=0.1.4",
    "napari",
    "zarr",
    "cellpose==2.1.0",
    "matplotlib",
    "aicsimageio",
    "scipy>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/MMV-Lab/mmv_h4tracks"
"Bug Tracker" = "https://github.com/MMV-Lab/mmv_h4tracks/issues"
Documentation = "https://github.com/MMV-Lab/mmv_h4tracks#README.md"
"Source Code" = "https://github.com/MMV-Lab/mmv_h4tracks"
"User Support" = "https://github.com/MMV-Lab/mmv_h4tracks/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mmv_h4tracks = [
    "napari.yaml",
    "custom_models.json",
    "ressources/*.jpg",
    "models/Neutrophil_granulocytes",
    "models/custom_models/.gitkeep",
]

[project.entry-points."napari.manifest"]
mmv_h4tracks = "mmv_h4tracks:napari.yaml"

