[metadata]
name = mmv-tracking-napari
version = 1.0.0
author = lennart kowitz
author_email = lennart.kowitz@isas.de
url = https://github.com/MMV-Lab/mmv-tracking-napari
license = BSD-3-Clause
description = A simple plugin to use with napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Framework :: napari
    Topic :: Scientific/Engineering :: Image Processing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/MMV-Lab/mmv-tracking-napari/issues
    Documentation = https://github.com/MMV-Lab/mmv-tracking-napari#README.md
    Source Code = https://github.com/MMV-Lab/mmv-tracking-napari
    User Support = https://github.com/MMV-Lab/mmv-tracking-napari/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src
setup_requires =
    setuptools-scm

# add your package requirements here
install_requires =
    numpy
    npe2
    napari-plugin-engine>=0.1.4
    napari
    zarr
    cellpose==2.1.0
    keyboard
    matplotlib
    aicsimageio

[options.packages.find]
where = src

[options.entry_points] 
napari.manifest = 
    mmv-tracking-napari = mmv_tracking_napari:napari.yaml

[options.package_data]
mmv_tracking_napari =
    napari.yaml
