[metadata]
name = mmv_h4tracks
version = 1.0.0
author = lennart kowitz
author_email = lennart.kowitz@isas.de
url = https://github.com/MMV-Lab/mmv_h4tracks
license = BSD-3-Clause
description = A simple plugin to use with napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Framework :: napari
    Topic :: Scientific/Engineering :: Image Processing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/MMV-Lab/mmv_h4tracks/issues
    Documentation = https://github.com/MMV-Lab/mmv_h4tracks#README.md
    Source Code = https://github.com/MMV-Lab/mmv_h4tracks
    User Support = https://github.com/MMV-Lab/mmv_h4tracks/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm

# add your package requirements here
install_requires =
    numpy
    npe2
    napari-plugin-engine>=0.1.4
    napari
    zarr
    cellpose==2.1.0
    keyboard
    matplotlib
    aicsimageio
    scipy>=1.11.0

[options.packages.find]
where = src

[options.entry_points] 
napari.manifest = 
    mmv_h4tracks = mmv_h4tracks:napari.yaml

[options.package_data]
mmv_h4tracks =
    napari.yaml
